# snacks_crud_project

./: README.md  pyproject.toml
snacks_crud_project/: db.sqlite3
snacks_crud_project/snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks_crud_project/snacks/migrations/: 0001_initial.py
snacks_crud_project/snacks_crud_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks_crud_project/templates/: snack_create.html  snack_list.html  snack_update.html
